# cnrdiff

./: .gitignore  README.en.md  README.md  cnrdiff.py  environment.yml  main.py  mainwindow.py  mainwindow.ui  pyproject.toml  readme.en.md  requirements.txt  setup.py  ui_mainwindow.py
.github/workflows/: publish-to-pypi.yml
cnrdiff/: __init__.py  cnrdiff.py
