[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnrdiff"
version = "1.3.0"
description = "A library used to compare signal-to-noise ratio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sheng Guoliang", email = "shengguoliang@sinognss.com"},
    {name = "Yang Fawang", email = "yangfawang@sinognss.com"},
]
keywords = ["cnr", "signal-to-noise", "gnss", "rinex", "bnc"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/sinognss/cnrdiff"
Repository = "https://github.com/sinognss/cnrdiff"
Issues = "https://github.com/sinognss/cnrdiff/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cnrdiff*"]
